# project-board-api

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1a116a53de12_add_role_to_requests.py  2ca2adee382f_changes_in_database_and_added_entities.py  2db0665534e7_changes_in_project_invitations_entity.py  2faba67fbda0_upgrade_entity_requests.py  4fb5e863b32b_request_entity_added.py  a4e859f2f176_upgrade_entity_requests.py
src/auth/: dependencies.py
src/auth/controllers/: auth_controller.py
src/auth/exceptions/: auth_exception.py
src/auth/schemas/: auth_schema.py
src/auth/services/: auth_services.py
src/collaborators/: dependencies.py  exceptions.py
src/collaborators/controllers/: collaborators_controller.py
src/collaborators/models/: collaborators_model.py
src/collaborators/repositories/: collaborator_repository.py
src/collaborators/schemas/: collaborators_schema.py
src/collaborators/services/: collaborators_service.py
src/core/security/: jwt_manager.py  password_manager.py
src/project_invitations/: dependencies.py
src/project_invitations/controllers/: project_invitation_controller.py
src/project_invitations/exceptions/: project_invitation_exceptions.py
src/project_invitations/models/: project_invitation_model.py
src/project_invitations/repositories/: project_invitation_repository.py
src/project_invitations/schemas/: project_invitations_schemas.py
src/projects/: dependencies.py
src/projects_tags/: dependencies.py  exceptions.py
src/requests/: dependencies.py  exceptions.py
src/users/: dependencies.py
(+23 files in other folders)
